--- a/templates/static/index.html.twig
+++ b/templates/static/index.html.twig
@@ -3,13 +3,11 @@
 {% block title %}Hello StaticController!{% endblock %}
 
 {% block contenu %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
+        <h1>Salut c'est Fabien </h1>
+
 
     This friendly message is coming from:
     <ul>
