--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,13 +35,11 @@
             <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Mot</a>
             <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="{{path('ajoutMot')}}">Ajouter un Mot</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
+               <a class="dropdown-item" href="#">Liste des mots </a>
             </div>
         </li>
         </ul>
