--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,11 +54,11 @@
             </div>
         </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Mot</a>
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Theme</a>
             <div class="dropdown-menu">
-            <a class="dropdown-item" href="{{path('ajoutMot')}}">Ajouter un Mot</a>
+            <a class="dropdown-item" href="{{path('ajoutMot')}}">Ajouter un Theme</a>
             <div class="dropdown-divider"></div>
-               <a class="dropdown-item" href="#">Liste des mots </a>
+               <a class="dropdown-item" href="#">Liste des Theme </a>
             </div>
         </li>
         </ul>
