--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,9 +56,9 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Theme</a>
             <div class="dropdown-menu">
-            <a class="dropdown-item" href="{{path('ajoutMot')}}">Ajouter un Theme</a>
+            <a class="dropdown-item" href="{{path('ajoutTheme')}}">Ajouter un Theme</a>
             <div class="dropdown-divider"></div>
-               <a class="dropdown-item" href="#">Liste des Theme </a>
+               <a class="dropdown-item" href="{{path('listeThemes')}}">Liste des Themes </a>
             </div>
         </li>
         </ul>
