--- a/templates/theme/ajoutTheme.html.twig
+++ b/templates/theme/ajoutTheme.html.twig
@@ -7,7 +7,7 @@
 
 <div class="container-fluid">
     <div class="row justify-content-center">
-        <h1 class="text-center text-secondary p-4">Ajouter un mot</h1>
+        <h1 class="text-center text-secondary p-4">Ajouter un theme</h1>
     </div>
     <div class="row justify-content-center">
         <div class="col-8 bg-secondary p-4 m-0 text-white">
