--- a/templates/theme/modifTheme.html.twig
+++ b/templates/theme/modifTheme.html.twig
@@ -1,13 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{parent()}}Ajout Theme{% endblock %}
+{% block title %}{{parent()}}Modif Theme{% endblock %}
 
 {% block contenu %}
 {{parent()}}
-
 <div class="container-fluid">
     <div class="row justify-content-center">
-        <h1 class="text-center text-secondary p-4">Ajouter un mot</h1>
+        <h1 class="text-center text-secondary p-4">Modifier Un theme</h1>
     </div>
     <div class="row justify-content-center">
         <div class="col-8 bg-secondary p-4 m-0 text-white">
@@ -15,5 +14,4 @@
         </div>
     </div>
 </div>
-
 {% endblock %}
