--- a/templates/static/index.html.twig
+++ b/templates/static/index.html.twig
@@ -6,7 +6,7 @@
 
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
-        <h1>Salut c'est Fabien </h1>
+        <h1>Salut c'est Fabien et Maxence </h1>
 
 
     This friendly message is coming from:
