--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="{{path('accueil')}}">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="{{path('accueil')}}">Home
             <span class="sr-only">(current)</span>
             </a>
         </li>
@@ -44,7 +44,6 @@
             <a class="dropdown-item" href="#">Separated link</a>
             </div>
         </li>
-
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Mot</a>
             <div class="dropdown-menu">
@@ -59,6 +58,15 @@
             <a class="dropdown-item" href="{{path('ajoutTheme')}}">Ajouter un Theme</a>
             <div class="dropdown-divider"></div>
                <a class="dropdown-item" href="{{path('listeThemes')}}">Liste des Themes </a>
+            </div>
+        </li>
+        </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Test</a>
+            <div class="dropdown-menu">
+            <a class="dropdown-item" href="{{path('ajoutTest')}}">Ajouter un Test</a>
+            <div class="dropdown-divider"></div>
+               <a class="dropdown-item" href="{{path('listeTests')}}">Liste des Tests </a>
             </div>
         </li>
         </ul>
