--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,24 +24,13 @@
             <a class="nav-link" href="{{path('accueil')}}">Home
             <span class="sr-only">(current)</span>
             </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-        </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Catégorie</a>
             <div class="dropdown-menu">
             <a class="dropdown-item" href="{{path('ajoutCategorie')}}">Ajout Catégorie</a>
-            <a class="dropdown-item" href="{{path('listeCategorie')}}">Liste Catégorie</a>
-            <a class="dropdown-item" href="#">Something else here</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
+                 <a class="dropdown-item" href="{{path('listeCategorie')}}">Liste Catégorie</a>
             </div>
         </li>
         <li class="nav-item dropdown">
@@ -67,6 +56,22 @@
             <a class="dropdown-item" href="{{path('ajoutTest')}}">Ajouter un Test</a>
             <div class="dropdown-divider"></div>
                <a class="dropdown-item" href="{{path('listeTests')}}">Liste des Tests </a>
+            </div>
+        </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Role</a>
+            <div class="dropdown-menu">
+            <a class="dropdown-item" href="{{path('ajoutRole')}}">Ajouter un Role</a>
+            <div class="dropdown-divider"></div>
+               <a class="dropdown-item" href="{{path('listeRoles')}}">Liste des Roles </a>
+            </div>
+        </li>
+         <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Abonnement</a>
+            <div class="dropdown-menu">
+            <a class="dropdown-item" href="{{path('ajoutAbonnement')}}">Ajouter un abonnement</a>
+            <div class="dropdown-divider"></div>
+               <a class="dropdown-item" href="{{path('listeAbonnements')}}">Liste des abonnements </a>
             </div>
         </li>
         </ul>
