--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -80,6 +80,15 @@
                <a class="dropdown-item" href="{{path('listeEntreprises')}}">Liste des Entreprises</a>
             </div>
         </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Utilisateur</a>
+            <div class="dropdown-menu">
+            <a class="dropdown-item" href="{{path('ajoutUtilisateur')}}">Ajouter un Utilisateur</a>
+            <div class="dropdown-divider"></div>
+               <a class="dropdown-item" href="{{path('listeUtilisateurs')}}">Liste des Utilisateurs</a>
+            </div>
+        </li>
+
         </ul>
         <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search">
