--- a/templates/categorie/listeCategorie.html.twig
+++ b/templates/categorie/listeCategorie.html.twig
@@ -15,16 +15,21 @@
                     <thead>
                         <tr>
                             <th scope="col">Libellé</th>
+                            <th scope="col">Nombre de mot</th>
                             <th></th>
                             <th></th>
+                            
                         </tr>
                     </thead>
                     <tbody>
                         {% for categorie in categories %}
                             <tr class="{{ cycle(['table-primary', 'table-secondary'], loop.index0) }}">
                                 <td>{{categorie.libelle |capitalize }}</td>
+                                <td>{{categorie.nbMot}}</td>
                                 <td><a href="{{path('modifCategorie',{'id': categorie.id})}}" class="text-white"><span class="material-icons" title="Modifier une categorie">create</span></a></td>
                                 <td><a href="{{path('listeCategorie',{'supp':categorie.id})}}" class="text-white"><span class="material-icons" title="Supprimer une categorie"> delete </span></a></td>
+                                
+
                             </tr>
                         {% endfor %}
                     </tbody>
