--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -108,6 +108,9 @@
         <li class="nav-item">
             <a class="nav-link" href="{{path('app_logout')}}">Se déconnecter</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{path('userProfile',{'id': app.user.id })}}">Mon profil </a>
+          </li>
       {% endif %}    
 
         <form class="form-inline my-2 my-lg-0">
@@ -124,7 +127,7 @@
                 {% for message in app.flashes('notice') %}
                 <br/>
                 <div class="flash-notice alert alert-secondary text-center">
-                    message();
+                    {{ message }}
                 
                 </div>
                 {% endfor %}
