--- a/templates/static/test.html.twig
+++ b/templates/static/test.html.twig
@@ -17,6 +17,11 @@
 
 <div id="question" name="question"></div>
 <input type="text" id="reponse" name="reponse"></input>
+<button name="btBegin" id="btBegin">Commencer </button>
+<button name="btTrad" id="btTrad">Suivant </button>
+<button name="btEnd" id="btEnd">Revenir sur la page des tests</button>
+
+
 
 {% endblock %}
 
