--- a/templates/static/index.html.twig
+++ b/templates/static/index.html.twig
@@ -11,6 +11,9 @@
                  {% if is_granted('IS_AUTHENTICATED_FULLY')%}
                     <h3>Bonjour {{app.user.email}}</h3>
                     <h3>Bonjour {{app.user.id}}</h3>
+                    {% if app.user.utilisateur.nom is defined %}
+                    <h3>Bonjour {{app.user.utilisateur.nom}}  {{app.user.utilisateur.prenom}}</h3>
+                    {% endif %}
 
                   {% endif %}
 
