--- a/templates/test/listeTests.html.twig
+++ b/templates/test/listeTests.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{parent()}}Liste catégories{% endblock %}
+{% block title %}{{parent()}}Liste Tests{% endblock %}
 
 {% block contenu %}
 {{parent()}}
 <div class="container-fluid">
     <div class="row justify-content-center">
-        <h1 class="text-center text-secondary p-4">Liste des catégories</h1>
+        <h1 class="text-center text-secondary p-4">Liste des Test</h1>
     </div>
     <div class="row justify-content-center">
         <div class="col-8 p-4 m-0 text-primary">
