--- a/templates/utilisateur/user_profile.html.twig
+++ b/templates/utilisateur/user_profile.html.twig
@@ -28,8 +28,13 @@
                    {% endfor %} </p>
                    <p class="card-text">Date d'inscription </p>
                   
+
                  </div>
               </div>
+
+              <a href="{{path('modifRole',{'id': user.id})}}" class="text-white"> Devenir Admin </a>
+
+
            </div>
         </div>
       </div>
