--- a/templates/entreprise/ajoutEntreprise.html.twig
+++ b/templates/entreprise/ajoutEntreprise.html.twig
@@ -8,9 +8,25 @@
     <div class="row justify-content-center">
         <h1 class="text-center text-secondary p-4">Ajout d'une entreprise</h1>
     </div>
-    <div class="row justify-content-center">
-        <div class="col-8 bg-secondary p-4 m-0 text-white">
-            {{form(form)}}
+   <div class="row justify-content-center">
+        <div class="col-8 bg-primary p-4 m-0 text-white">
+
+        
+        {{ form_start(form) }}
+
+        <div class="form-group">
+            {{ form_label(form.libelle, 'Nom de l\'entreprise', {'label_attr': {'class': 'font-weightbold'}}) }}
+            {{ form_widget(form.libelle, {'attr': {'class': 'form-control'}}) }}
+        </div>
+
+        
+       
+        <div class="form-group mx-auto text-center">
+            {{ form_widget(form.ajouter, { 'label': "Ajouter", 'attr': {'class': 'btn font-weightbold bg-success text-white mx-auto text-center'}}) }}
+        </div>
+
+        {{ form_end(form) }}
+            
         </div>
     </div>
 </div>
