--- a/templates/mot/ajoutMot.html.twig
+++ b/templates/mot/ajoutMot.html.twig
@@ -10,8 +10,31 @@
         <h1 class="text-center text-secondary p-4">Ajouter un mot</h1>
     </div>
     <div class="row justify-content-center">
-        <div class="col-8 bg-secondary p-4 m-0 text-white">
-            {{form(form)}}
+        <div class="col-8 bg-primary p-4 m-0 text-white">
+
+        {{ form_start(form) }}
+
+        <div class="form-group">
+            {{ form_label(form.libelle, 'Mot à traduire', {'label_attr': {'class': 'font-weightbold'}}) }}
+            {{ form_widget(form.libelle, {'attr': {'class': 'form-control'}}) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.traduction, 'Sa traduction ', {'label_attr':{'class': 'font-weight-bold'}}) }}
+            {{ form_widget(form.traduction, {'attr': {'class': 'form-control'}}) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.categorie, 'Sa catégorie', {'label_attr': {'class': 'font-weight-bold'}})}}
+            {{ form_widget(form.categorie, {'attr': {'class': 'form-control'}}) }}
+        </div>
+
+        <div class="form-group mx-auto text-center">
+            {{ form_widget(form.ajouter, { 'label': "Ajouter", 'attr': {'class': 'btn font-weightbold bg-success text-white mx-auto text-center'}}) }}
+        </div>
+
+        {{ form_end(form) }}
+            
         </div>
     </div>
 </div>
