--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,16 +14,29 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" required>
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <h1 class="text-center text-secondary p-4">Se connecter</h1>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-8 bg-primary p-4 m-0 text-white">
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+        
+       <label for="inputEmail">Email</label>
+        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
+        <label for="inputPassword">Password</label>
+        <input type="password" name="password" id="inputPassword" class="form-control" required>
 
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+      <br> 
+        <div class="form-group mx-auto text-center">
+            <button class="btn font-weightbold bg-success text-white mx-auto text-center" type="submit">  Se connecter  </button>
+        </div>
+            
+        </div>
+    </div>
+</div>
+    
     {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html
@@ -35,8 +48,6 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
+  
 </form>
 {% endblock %}
