--- a/templates/static/inscrire.html.twig
+++ b/templates/static/inscrire.html.twig
@@ -6,12 +6,37 @@
 {{parent()}}
 <div class="container-fluid">
     <div class="row justify-content-center">
-        <h1 class="text-center text-secondary p-4">Formulaire d'inscription</h1>
+        <h1 class="text-center text-secondary p-4">Inscription</h1>
     </div>
-    <div class="row justify-content-center">
-        <div class="col-8 bg-secondary p-4 m-0 text-white">
-            {{form(form)}}
+  <div class="row justify-content-center">
+        <div class="col-8 bg-primary p-4 m-0 text-white">
+
+        
+        {{ form_start(form) }}
+
+        <div class="form-group">
+            {{ form_label(form.email, 'Email', {'label_attr': {'class': 'font-weightbold'}}) }}
+            {{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.password, 'Mot de passe', {'label_attr':{'class': 'font-weight-bold'}}) }}
+            {{ form_widget(form.password, {'attr': {'class': 'form-control'}}) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.confirmation, 'Confirmation mot de passe ', {'label_attr':{'class': 'font-weight-bold'}}) }}
+            {{ form_widget(form.confirmation, {'attr': {'class': 'form-control'}}) }}
+        </div>
+       
+        <div class="form-group mx-auto text-center">
+            {{ form_widget(form.inscrire, { 'label': "S'inscire", 'attr': {'class': 'btn font-weightbold bg-success text-white mx-auto text-center'}}) }}
+        </div>
+
+        {{ form_end(form) }}
+            
         </div>
     </div>
 </div>
+
 {% endblock %}
