--- a/templates/utilisateur/user_profile.html.twig
+++ b/templates/utilisateur/user_profile.html.twig
@@ -19,7 +19,7 @@
                </span>
                </div>
                <div class="col-md-8">
-                 <div class="card-body text-white">
+                 <div class="card-body text-black">
                    <h5 class="card-title">{{user.email | capitalize }} </h5>
                    
                    <p class="card-text">role :
