--- a/templates/role/modifRole.html.twig
+++ b/templates/role/modifRole.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{parent()}}Modifier Role {% endblock %}
+{% block title %}{{parent()}}Modifier Abonnement {% endblock %}
 
 {% block contenu %}
 {{parent()}}
 
 <div class="container-fluid">
     <div class="row justify-content-center">
-        <h1 class="text-center text-secondary p-4">Modifier un Role</h1>
+        <h1 class="text-center text-secondary p-4">Modifier un abonnement</h1>
     </div>
     <div class="row justify-content-center">
         <div class="col-8 bg-secondary p-4 m-0 text-white">
