--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -104,6 +104,13 @@
                <a class="dropdown-item" href="{{path('listeListes')}}">Liste des Listes</a>
             </div>
         </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Certification</a>
+            <div class="dropdown-menu">
+            <div class="dropdown-divider"></div>
+               <a class="dropdown-item" href="{{path('listeCertifications')}}">Liste des Certifications</a>
+            </div>
+        </li>
         </ul>
          <li class="nav-item">
             <a class="nav-link" href="{{path('test')}}">Faire un test</a>
